cluster/apps/authelia-test/authelia-ingressroute.yaml
#
#

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-https-ingressroute
  namespace: authelia-test
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      services:
        - name: authelia-test-authelia
          port: 9091
  tls:
    secretName: authelia-letsencrypt-production-certificate

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authelia
  namespace: authelia-test
spec:
  forwardAuth:
    address: http://authelia-test-authelia.authelia-test.svc.cluster.local:9091/api/verify?rd=https://auth.${SECRET_DIGITALOCEAN_DOMAIN_02}
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
